# dcc-decoder

./: .gitignore  LICENSE  README.md
src/: CMakeLists.txt  DccDecoder.cpp  DccDecoder.h  DccDevice.h  Dockerfile  MP3Player.cpp  MP3Player.h  RP2040DccDecoder.cpp  RP2040DccDecoder.h  Train.cpp  Train.h  build.sh  convert.c  main.cpp  test.py  timing.c  wave.c  wave.h
src/arduino/: Dockerfile  arduino-cli.yaml  sketch.ino
src/common/: CMakeLists.txt  DccDecoder.cpp  DccDecoder.h  DccDecoderState.cpp  DccDecoderState.h  DccDevice.cpp  DccDevice.h  DccStatus.h
src/fs/: CMakeLists.txt  f_util.h  ff.c  ff.h
src/mp3/src/: Adafruit_MP3.cpp  Adafruit_MP3.h
src/picosounds/: README.md  config.c  config.h  double_buffer.c  picosounds.c
